--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html><html lang="zh-CN" data-theme="light"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>NeonGel工作室 - 用心创造快乐！</title><meta name="keywords" content="Blog"><meta name="author" content="NeonGel Studio"><meta name="copyright" content="NeonGel Studio"><meta name="format-detection" content="telephone=no"><meta name="theme-color" content="#ffffff"><meta name="description" content="NeonGel工作室,用心创造快乐！">
+<audio 
+autoplay="autoplay" 
+loop="loop" 
+preload="auto"
+src="./music/Maroon 5-Payphone.mp3">
+</audio>
 <meta property="og:type" content="website">
 <meta property="og:title" content="NeonGel工作室">
 <meta property="og:url" content="https://neongel.github.io/index.html">
